// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtKBColumnConfiguration component should render column "absorption" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "accession" 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "annotation_score" 1`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-platinum"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-sea-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-sea-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_activity_regulation" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_allergen" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_alternative_products" 1`] = `
<DocumentFragment>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      Alternative initiation
    </strong>
    .
  </p>
  <p>
    value1
  </p>
  <hr />
  <h3
    id="isoID1"
  >
    isoID1
  </h3>
  <div
    class="info-list info-list--columns info-list--compact"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        name
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        syn value
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        value1
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_biotechnology" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_catalytic_activity" 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    <strong>
      1.2.4.5
    </strong>
     some reaction
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     direction 
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        Imported
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_cofactor" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <span>
      Cofactor Name 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </span>
    <section
      class="text-block"
    >
      value2
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_developmental_stage" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_disease" 1`] = `
<DocumentFragment>
  <h3>
    DiseaseEntry Id (someAcron)
  </h3>
  <span
    class="text-block"
  >
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </span>
  <div
    class="info-list"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            value2
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Description
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        some description
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          See also
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <a
          class="external-link"
          href="https://www.omim.org/entry/3124"
          rel="noopener"
          target="_blank"
        >
          3124
          <svg
            fill="none"
            viewBox="0 0 16 16"
            width="12.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 0h-6v2h3.071L7 8.071l1.414 1.414L14 3.9V6h2V0z"
              fill="currentColor"
            />
            <path
              d="M7 2H0v14h14V9h-2v5H2V4h5V2z"
              fill="currentColor"
            />
          </svg>
        </a>
          
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_disruption_phenotype" 1`] = `
<DocumentFragment>
  <h5>
    Isoform 4
  </h5>
  <section
    class="text-block"
  >
    value
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_domain" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_function" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_induction" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_interaction" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <div>
        <a
          href="/uniprotkb/P12345"
        >
          P12345
        </a>
      </div>
    </li>
    <li>
      <div>
        <a
          href="/uniprotkb/P12345"
        >
          P12345
        </a>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_mass_spectrometry" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      isoform 1
    </h3>
    Molecular mass is 2.1 Da. Determined by LSI. note value
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_miscellaneous" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_pathway" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_pharmaceutical" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_polymorphism" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_ptm" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_rna_editing" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at positions 
      <span>
        rna position 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </span>
    </div>
    <div>
      <span>
        value 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_sequence_caution" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <svg
        fill="none"
        viewBox="0 0 16 16"
        width="12.5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 0h-6v2h3.071L7 8.071l1.414 1.414L14 3.9V6h2V0z"
          fill="currentColor"
        />
        <path
          d="M7 2H0v14h14V9h-2v5H2V4h5V2z"
          fill="currentColor"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_similarity" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_subcellular_location" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      molecule value
    </h3>
    <div>
      <strong>
        location value
      </strong>
       
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
      : topology value 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </div>
    <section
      class="text-block"
    >
      value
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "cc_subunit" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_tissue_specificity" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "cc_toxic_dose" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "date_created" 1`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "date_modified" 1`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "date_sequence_modified" 1`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ec" 1`] = `
<DocumentFragment>
  1.2.3.4 
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "error_gmodel_pred" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      rel="noopener"
      target="_blank"
    >
      sequence
      <svg
        fill="none"
        viewBox="0 0 16 16"
        width="12.5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 0h-6v2h3.071L7 8.071l1.414 1.414L14 3.9V6h2V0z"
          fill="currentColor"
        />
        <path
          d="M7 2H0v14h14V9h-2v5H2V4h5V2z"
          fill="currentColor"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "family" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "fragment" 1`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ft_act_site" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_binding" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_ca_bind" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_carbohyd" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_chain" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_coiled" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_compbias" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_conflict" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_crosslnk" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_disulfide" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_dna_bind" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_domain" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_helix" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_init_met" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_intramem" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_lipid" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_metal" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_mod_res" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_motif" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_mutagen" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_con" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_std" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_non_ter" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_np_bind" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_peptide" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_propep" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_region" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_repeat" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_signal" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_site" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_strand" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_top_dom" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_transit" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_transmem" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_turn" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_unsure" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_var_seq" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "ft_variant" 1`] = `
<DocumentFragment>
  <div
    class="loader-container"
  >
    <svg
      class="loader"
      height="100"
      viewBox="0 0 100 100"
      width="100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M9 50c6.833-10.667 13.667-16 20.5-16S43.167 39.333 50 50s13.667 16 20.5 16S84.167 60.667 91 50"
          stroke="#3ca3ca"
          stroke-linecap="square"
          stroke-width="2"
        />
        <circle
          cx="9"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="30"
          cy="34"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="50"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="70"
          cy="66"
          fill="#3ca3ca"
          r="6"
        />
        <circle
          cx="91"
          cy="50"
          fill="#3ca3ca"
          r="6"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ft_zn_fing" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "gene_names" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <div
        class="info-list info-list--no-title"
      >
        <div
          class="info-list__item"
        >
          <div
            class="info-list__title"
          >
            <h5
              class="bold"
            >
              Name
            </h5>
          </div>
          <div
            class="info-list__content"
          >
            some Gene 
            <button
              aria-controls="<UUID>"
              aria-expanded="false"
              class="evidence-tag svg-colour-unreviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <svg
                fill="currentColor"
                height="12"
                viewBox="0 0 10 15"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 0H0v15l5-5 5 5V0z"
                />
              </svg>
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="<UUID>"
            />
          </div>
        </div>
        <div
          class="info-list__item"
        >
          <div
            class="info-list__title"
          >
            <h5
              class="bold"
            >
              Synonyms
            </h5>
          </div>
          <div
            class="info-list__content"
          >
            some Syn 
            <button
              aria-controls="<UUID>"
              aria-expanded="false"
              class="evidence-tag svg-colour-unreviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <svg
                fill="currentColor"
                height="12"
                viewBox="0 0 10 15"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 0H0v15l5-5 5 5V0z"
                />
              </svg>
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="<UUID>"
            />
          </div>
        </div>
        <div
          class="info-list__item"
        >
          <div
            class="info-list__title"
          >
            <h5
              class="bold"
            >
              ORF names
            </h5>
          </div>
          <div
            class="info-list__content"
          >
            some orf 
            <button
              aria-controls="<UUID>"
              aria-expanded="false"
              class="evidence-tag svg-colour-reviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <svg
                fill="currentColor"
                height="12"
                viewBox="0 0 10 15"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 0H0v15l5-5 5 5V0z"
                />
              </svg>
              <span
                class="evidence-tag__label"
                title=""
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="<UUID>"
            />
          </div>
        </div>
        <div
          class="info-list__item"
        >
          <div
            class="info-list__title"
          >
            <h5
              class="bold"
            >
              Ordered locus names
            </h5>
          </div>
          <div
            class="info-list__content"
          >
            some locus 
            <button
              aria-controls="<UUID>"
              aria-expanded="false"
              class="evidence-tag svg-colour-unreviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <svg
                fill="currentColor"
                height="12"
                viewBox="0 0 10 15"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 0H0v15l5-5 5 5V0z"
                />
              </svg>
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="<UUID>"
            />
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_oln" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some locus 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_orf" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some orf 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 publication
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_primary" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <div>
        some Gene
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "gene_synonym" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      some Syn 
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "go" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "go_c" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_f" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "go_id" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "go_p" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "id" 1`] = `
<DocumentFragment>
  <span>
    uniprot_id
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "keyword" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-11111"
      >
         #keyword value
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "keywordid" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-11111"
      >
         #KW-11111
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "kinetics" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684uM for sub1 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <button
        aria-controls="<UUID>"
        aria-expanded="false"
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 10 15"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0H0v15l5-5 5 5V0z"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="<UUID>"
      />
    </section>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "length" 1`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lineage" 1`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "lit_pubmed_id" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/12345"
      >
        12345
      </a>
    </li>
    <li>
      <a
        href="/citations/6789"
      >
        6789
      </a>
    </li>
    <li>
      <a
        href="/citations/12348"
      >
        12348
      </a>
    </li>
    <li>
      <a
        href="/citations/12346"
      >
        12346
      </a>
    </li>
    <li>
      <a
        href="/citations/123415"
      >
        123415
      </a>
    </li>
    <li>
      <button
        class="button tertiary expandable-list__action"
        data-testid="expandable-message"
        type="button"
      >
        2 more IDs
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "mapped_pubmed_id" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "mass" 1`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "organism_id" 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606 
  </a>
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=9606"
    rel="noopener"
    target="_blank"
  >
    NCBI
    <svg
      fill="none"
      viewBox="0 0 16 16"
      width="12.5"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 0h-6v2h3.071L7 8.071l1.414 1.414L14 3.9V6h2V0z"
        fill="currentColor"
      />
      <path
        d="M7 2H0v14h14V9h-2v5H2V4h5V2z"
        fill="currentColor"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "organism_name" 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    scientific name (common name)  (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "ph_dependence" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_existence" 1`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "protein_name" 1`] = `
<DocumentFragment>
  <div
    class="info-list info-list--no-title"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Recommended name
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        rec full Name 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          EC number
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        1.2.3.4 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Short names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        recommended short name 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Alternative names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            a full alt Name 
            <button
              aria-controls="<UUID>"
              aria-expanded="false"
              class="evidence-tag svg-colour-reviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <svg
                fill="currentColor"
                height="12"
                viewBox="0 0 10 15"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 0H0v15l5-5 5 5V0z"
                />
              </svg>
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="<UUID>"
            />
             (short alt name1 
            <button
              aria-controls="<UUID>"
              aria-expanded="false"
              class="evidence-tag svg-colour-reviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <svg
                fill="currentColor"
                height="12"
                viewBox="0 0 10 15"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 0H0v15l5-5 5 5V0z"
                />
              </svg>
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="<UUID>"
            />
            ) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Cleaved into 1 chains
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            containsrec full Name (containsrecommended short name)  
            <strong>
              Alternative names: 
            </strong>
            containsa full alt Name (containsshort alt name1) 
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Submission names
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            sub full Name 
            <button
              aria-controls="<UUID>"
              aria-expanded="false"
              class="evidence-tag svg-colour-reviewed"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <svg
                fill="currentColor"
                height="12"
                viewBox="0 0 10 15"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 0H0v15l5-5 5 5V0z"
                />
              </svg>
              <span
                class="evidence-tag__label"
                title=""
              >
                1 automatic annotation
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="<UUID>"
            />
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          Biotech name
        </h5>
      </div>
      <div
        class="info-list__content"
      >
        biotech 
        <button
          aria-controls="<UUID>"
          aria-expanded="false"
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          type="button"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 10 15"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0H0v15l5-5 5 5V0z"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </button>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
          id="<UUID>"
        />
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          CD Antigen Name
        </h5>
      </div>
      <div
        class="info-list__content"
      />
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__title"
      >
        <h5
          class="bold"
        >
          INN Name
        </h5>
      </div>
      <div
        class="info-list__content"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "redox_potential" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "reviewed" 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--reviewed"
    title="This marks a reviewed UniProtKB entry"
  >
    <svg
      fill="currentColor"
      viewBox="0 0 426 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "sequence" 1`] = `
<DocumentFragment>
  <section
    class="sequence-container"
  >
    <div
      class="sequence"
    >
      <div
        class="sequence__sequence"
      >
        <span
          class="sequence__sequence__chunk"
        >
          <svg
            height="30"
            width="100"
          >
            <text
              class="sequence__sequence__chunk__counter"
              x="100"
              y="10"
            >
              10
            </text>
            <text
              class="sequence__sequence__chunk__sequence"
              x="0"
              y="20"
            >
              SAPSQDFMRF
            </text>
          </svg>
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "sequence_version" 1`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "structure_3d" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "temp_dependence" 1`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <button
      aria-controls="<UUID>"
      aria-expanded="false"
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <svg
        fill="currentColor"
        height="12"
        viewBox="0 0 10 15"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 0H0v15l5-5 5 5V0z"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="<UUID>"
    />
  </section>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "uniparc_id" 1`] = `<DocumentFragment />`;

exports[`UniProtKBColumnConfiguration component should render column "version" 1`] = `
<DocumentFragment>
  20
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "virus_hosts" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <p>
        <a
          href="/taxonomy/9606"
        >
          scientific name (common name)  (synonyms 1)
        </a>
      </p>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniProtKBColumnConfiguration component should render column "xref_proteomes" 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  />
</DocumentFragment>
`;
